[package]
name = "cursed_roll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
jwt-simple = "0.11.9"
rand = "0.8.5"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
